// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`genLambdaEndpoint.forApiGateway given: [case1] valid request when: [t0] handler invoked then: result matches snapshot 1`] = `
{
  "body": "{"id":"user-123","name":"Alice"}",
  "headers": {
    "Content-Type": "application/json",
    "Origin-Agent-Cluster": "?1",
    "Referrer-Policy": "no-referrer",
    "Strict-Transport-Security": "max-age=15552000; includeSubDomains; preload",
    "X-Content-Type-Options": "nosniff",
    "X-DNS-Prefetch-Control": "off",
    "X-Download-Options": "noopen",
    "X-Permitted-Cross-Domain-Policies": "none",
  },
  "statusCode": 200,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case2] invalid request body when: [t0] handler invoked then: result matches snapshot 1`] = `
{
  "body": "{"errorMessage":"✋ ConstraintError: validation failed: email: Invalid email address\\n\\n{\\n  \\"issues\\": [\\n    {\\n      \\"path\\": \\"email\\",\\n      \\"message\\": \\"Invalid email address\\",\\n      \\"code\\": \\"invalid_format\\"\\n    }\\n  ]\\n}","errorType":"BadRequestError","details":{"issues":[{"path":"email","message":"Invalid email address","code":"invalid_format"}]}}",
  "headers": {
    "Content-Type": "application/json",
  },
  "statusCode": 400,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case3] cors configured when: [t0] handler invoked then: it should include cors headers 1`] = `
{
  "body": "{"result":"ok"}",
  "headers": {
    "Access-Control-Allow-Credentials": "true",
    "Access-Control-Allow-Headers": "content-type,authorization",
    "Access-Control-Allow-Origin": "https://example.com",
    "Content-Type": "application/json",
    "Origin-Agent-Cluster": "?1",
    "Referrer-Policy": "no-referrer",
    "Strict-Transport-Security": "max-age=15552000; includeSubDomains; preload",
    "Vary": "Origin",
    "X-Content-Type-Options": "nosniff",
    "X-DNS-Prefetch-Control": "off",
    "X-Download-Options": "noopen",
    "X-Permitted-Cross-Domain-Policies": "none",
  },
  "statusCode": 200,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case4] handler error when: [t0] handler throws then: it should return 500 with generic error body 1`] = `
{
  "body": "{"errorMessage":"internal server error","errorType":"InternalServiceError","correlationId":"exid:[masked]"}",
  "headers": {
    "Content-Type": "application/json",
  },
  "statusCode": 500,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case5] access to the reconciled request when: [t0] handler invoked then: result matches snapshot 1`] = `
{
  "body": "{"method":"POST","path":"/users"}",
  "headers": {
    "Content-Type": "application/json",
    "Origin-Agent-Cluster": "?1",
    "Referrer-Policy": "no-referrer",
    "Strict-Transport-Security": "max-age=15552000; includeSubDomains; preload",
    "X-Content-Type-Options": "nosniff",
    "X-DNS-Prefetch-Control": "off",
    "X-Download-Options": "noopen",
    "X-Permitted-Cross-Domain-Policies": "none",
  },
  "statusCode": 200,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case6] deserialize body disabled when: [t0] handler invoked then: result matches snapshot 1`] = `
{
  "body": "{"received":"{\\"signature\\":\\"webhook-data\\"}"}",
  "headers": {
    "Content-Type": "application/json",
    "Origin-Agent-Cluster": "?1",
    "Referrer-Policy": "no-referrer",
    "Strict-Transport-Security": "max-age=15552000; includeSubDomains; preload",
    "X-Content-Type-Options": "nosniff",
    "X-DNS-Prefetch-Control": "off",
    "X-Download-Options": "noopen",
    "X-Permitted-Cross-Domain-Policies": "none",
  },
  "statusCode": 200,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case7] introspection request in prep env when: [t0] handler invoked with introspect payload then: response matches snapshot 1`] = `
{
  "body": "{"input":{"$schema":"https://json-schema.org/draft/2020-12/schema","type":"object","properties":{"customerId":{"type":"string"}},"required":["customerId"],"additionalProperties":false},"output":{"$schema":"https://json-schema.org/draft/2020-12/schema","type":"object","properties":{"status":{"type":"number"},"headers":{"type":"object","propertyNames":{"type":"string"},"additionalProperties":{"type":"string"}},"body":{"type":"object","properties":{"name":{"type":"string"},"balance":{"type":"number"}},"required":["name","balance"],"additionalProperties":false}},"additionalProperties":false}}",
  "headers": {
    "Content-Type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case8] introspection request in prod env when: [t0] handler invoked with introspect payload then: result matches snapshot 1`] = `
{
  "body": "{"errorMessage":"✋ ConstraintError: introspection is only available in prep environment, current: prod\\n\\n{\\n  \\"env\\": {\\n    \\"access\\": \\"prod\\"\\n  },\\n  \\"access\\": \\"prod\\"\\n}","errorType":"BadRequestError","details":{"env":{"access":"prod"},"access":"prod"}}",
  "headers": {
    "Content-Type": "application/json",
  },
  "statusCode": 400,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case9] introspection request without env config when: [t0] handler invoked with introspect payload then: result matches snapshot 1`] = `
{
  "body": "{"errorMessage":"✋ ConstraintError: introspection requires env.access context but env was not provided to handler\\n\\n{\\n  \\"hint\\": \\"pass env config to genLambdaEndpoint\\"\\n}","errorType":"BadRequestError","details":{"hint":"pass env config to genLambdaEndpoint"}}",
  "headers": {
    "Content-Type": "application/json",
  },
  "statusCode": 400,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case10] normal request with env config when: [t0] handler invoked with normal payload then: result matches snapshot 1`] = `
{
  "body": "{"message":"Hello, Bob!"}",
  "headers": {
    "Content-Type": "application/json",
    "Origin-Agent-Cluster": "?1",
    "Referrer-Policy": "no-referrer",
    "Strict-Transport-Security": "max-age=15552000; includeSubDomains; preload",
    "X-Content-Type-Options": "nosniff",
    "X-DNS-Prefetch-Control": "off",
    "X-Download-Options": "noopen",
    "X-Permitted-Cross-Domain-Policies": "none",
  },
  "statusCode": 200,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case11] a handler that answers 204 with no body when: [t0] handler invoked then: result matches snapshot 1`] = `
{
  "body": undefined,
  "headers": {
    "Origin-Agent-Cluster": "?1",
    "Referrer-Policy": "no-referrer",
    "Strict-Transport-Security": "max-age=15552000; includeSubDomains; preload",
    "X-Content-Type-Options": "nosniff",
    "X-DNS-Prefetch-Control": "off",
    "X-Download-Options": "noopen",
    "X-Permitted-Cross-Domain-Policies": "none",
  },
  "statusCode": 204,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case12] a handler that answers 308 with a Location header when: [t0] handler invoked then: result matches snapshot 1`] = `
{
  "body": undefined,
  "headers": {
    "Location": "https://ehmpath.com/surf/pipeline",
    "Origin-Agent-Cluster": "?1",
    "Referrer-Policy": "no-referrer",
    "Strict-Transport-Security": "max-age=15552000; includeSubDomains; preload",
    "X-Content-Type-Options": "nosniff",
    "X-DNS-Prefetch-Control": "off",
    "X-Download-Options": "noopen",
    "X-Permitted-Cross-Domain-Policies": "none",
  },
  "statusCode": 308,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case13] a handler that answers an xml body when: [t0] handler invoked then: result matches snapshot 1`] = `
{
  "body": "<Response><Say>cowabunga</Say></Response>",
  "headers": {
    "Content-Type": "text/xml",
    "Origin-Agent-Cluster": "?1",
    "Referrer-Policy": "no-referrer",
    "Strict-Transport-Security": "max-age=15552000; includeSubDomains; preload",
    "X-Content-Type-Options": "nosniff",
    "X-DNS-Prefetch-Control": "off",
    "X-Download-Options": "noopen",
    "X-Permitted-Cross-Domain-Policies": "none",
  },
  "statusCode": 200,
}
`;

exports[`genLambdaEndpoint.forApiGateway given: [case15] a handler that returns the aws-native wire shape when: [t0] it returns { statusCode, body } — the pre-upgrade habit then: result matches snapshot 1`] = `
{
  "body": "{"errorMessage":"internal server error","errorType":"InternalServiceError","correlationId":"exid:[masked]"}",
  "headers": {
    "Content-Type": "application/json",
  },
  "statusCode": 500,
}
`;
